2008-05-02  Johan Dahlin  <johan@gnome.org>

	* flumotion/component/base/admin_gtk.py 
	(BaseAdminGtkNode.loadGladeFile): 
	Fixes #942. Manager is assumed to work on / for now, while the 
	admin client is using os.path.sep and converts back and forth 
	when talking to the manager.

2008-05-02  Thomas Vander Stichele  <thomas at apestaart dot org>
 
	* common/common.mk:
	  put FLUMOTION_DIR first on PYTHONPATH.

2008-05-02  Johan Dahlin  <johan@flumotion.com>

	* flumotion/admin/gtk/componentview.py
	(ComponentView._get_widget_constructor.got_entry_point): 
	Ditto for componentview. Part of #942

2008-05-02  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/consumers/httpstreamer/httpstreamer_wizard.py:
	* flumotion/wizard/configurationwizard.py 
	(ConfigurationWizard._gotEntryPoint): Move out of 
	(ConfigurationWizard.getWizardPlugEntry): this
	(ConfigurationWizard.getWizardEntry):  and this.
	Make getWizardPlugEntry public, refactor component/plug callback to a 
	common path.
	Also replace the path separator given from the manager
	with os.path.sep, since that is what is expected on the
	admin client side of the story.
	Part of #942.

2008-05-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* common/common.mk:
	  Also get top_srcdir on the PYTHONPATH for when building nonscrdir.

2008-05-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/project/project.py:
	  Tell us the reason of an import error when trying to load a project.

2008-05-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* misc/validate-registry.py:
	* common/validate-registry.py:
	  Move from misc to common.
	* Makefile.am:
	* common/Makefile.am:
	* common/common.mk:
	  Fix up files for the move.

2008-05-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* misc/validate-registry.py:
	  Set up the package path as well.

2008-05-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* common/common.mk: